<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.fragment.home.GalleryFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="190dp"
            android:layout_height="50dp"

            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/Card">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:src="@drawable/restaurantes" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/restaurant" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/Card">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/markets" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:src="@drawable/cestas" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <androidx.cardview.widget.CardView
            android:layout_width="400dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/Card">

            <TextView
                android:id="@+id/farmText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="25dp"
                android:layout_marginTop="30dp"
                android:text="@string/pet"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/farmImeag"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="35dp"
                android:src="@drawable/remedios" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="400dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/Card">

            <TextView
                android:id="@+id/petText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="25dp"
                android:layout_marginTop="30dp"
                android:text="@string/pet"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/petImeag"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="35dp"
                android:src="@drawable/transferir" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="400dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/Card">

            <TextView
                android:id="@+id/drindkText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="25dp"
                android:layout_marginTop="30dp"
                android:text="@string/pet"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/drinkImeag"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="35dp"
                android:src="@drawable/bebidas" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="400dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/Card">

            <TextView
                android:id="@+id/gourmText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="25dp"
                android:layout_marginTop="30dp"
                android:text="@string/pet"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/gourmImeag"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="35dp"
                android:src="@drawable/gurmer" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_margin="15dp"
        android:elevation="10dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <ImageView
            android:id="@+id/imageViewGaleria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logo" />
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>